# DCC204-ProjetoFinal

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/html/: _jogador_8cpp.html  _jogador_8hpp.html  _jogador_8hpp_source.html  _jogo_base_8cpp.html  _jogo_base_8hpp.html  _jogo_base_8hpp.js  _jogo_base_8hpp_source.html  _jogo_da_velha_8cpp.html  _jogo_da_velha_8cpp.js  _jogo_da_velha_8hpp.html  _jogo_da_velha_8hpp_source.html  _leaderboard_8cpp.html  _leaderboard_8cpp.js  _leaderboard_8hpp.html  _leaderboard_8hpp.js  _leaderboard_8hpp_source.html  _lig4_8cpp.html  _lig4_8cpp.js  _lig4_8hpp.html  _lig4_8hpp_source.html  _othello_8cpp.html  _othello_8hpp.html  _othello_8hpp.js  _othello_8hpp_source.html  annotated.html  annotated_dup.js  class_jogador-members.html  class_jogador.html  class_jogador.js  class_jogo_base-members.html  class_jogo_base.html  class_jogo_base.js  class_jogo_da_velha-members.html  class_jogo_da_velha.html  class_jogo_da_velha.js  class_leaderboard-members.html  class_leaderboard.html  class_leaderboard.js  class_lig4-members.html  class_lig4.html  (+32 more)
docs/html/search/: all_0.js  all_1.js  all_2.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  (+20 more)
headers/: Jogador.hpp  Leaderboard.hpp  helpers.hpp  utils.hpp
headers/Jogos/: JogoBase.hpp  JogoDaVelha.hpp  Lig4.hpp  Othello.hpp
src/: Jogador.cpp  Leaderboard.cpp  helpers.cpp  main.cpp  utils.cpp
src/Jogos/: Doxyfile Lig4  JogoBase.cpp  JogoDaVelha.cpp  Lig4. .cpp  Lig4.cpp  Othello.cpp
tests/: test_leaderboard.cpp
